--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
       </div>
 
-      <div>
+      <div class="featured-architect">
         <img src="images/architect.png" alt="">
         <button id="experience-badge" class="btn-primary">
           <span id="experience-year">10+Years</span>
           <br>
-          <span>experience</span>
+          <span>Experience</span>
         </button>
       </div>
     </section>
@@ -160,7 +160,10 @@
     </main>
 
     <footer>
-
+     <div class="footer bg-light">
+      <p class="footer-text text-gray">All rights reserved copyright@2023 startup landing 
+        page design</p>
+     </div>
     </footer>
 
 </body>
